--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5d09893
+	base = 4d4d68e
 	trimbase = 
 	parent = release/rolling/rviz_visual_tools
-	previous = 
+	previous = 5d09893
