--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d84157e
+	base = 6961f19
 	trimbase = 
 	parent = debian/rolling/rviz_visual_tools
-	previous = 
+	previous = d84157e
