--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ed17f76
+	base = 383e2b7
 	trimbase = 
 	parent = rpm/rolling/rviz_visual_tools
-	previous = 
+	previous = ed17f76
